--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/packages.config
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/packages.config
@@ -6,4 +6,9 @@
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net481" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net481" />
+  <package id="Ninject" version="3.3.6" targetFramework="net481" />
+  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net481" />
+  <package id="Ninject.Web.Common" version="3.3.2" targetFramework="net481" />
+  <package id="Ninject.Web.Common.WebHost" version="3.3.2" targetFramework="net481" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net481" />
 </packages>
