--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/PartOne.Introduction.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/PartOne.Introduction.csproj
@@ -132,6 +132,9 @@
     <Compile Include="Areas\Chapter5\Models\Product.cs" />
     <Compile Include="Areas\Chapter6\Chapter6AreaRegistration.cs" />
     <Compile Include="Areas\Chapter6\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Chapter6\Infrastructure\NinjectDependencyResolver.cs" />
+    <Compile Include="Areas\Chapter6\Models\DiscountValueCalculator.cs" />
+    <Compile Include="Areas\Chapter6\Models\IDiscountCalculator.cs" />
     <Compile Include="Areas\Chapter6\Models\IValueCalculator.cs" />
     <Compile Include="Areas\Chapter6\Models\Merchandise.cs" />
     <Compile Include="Areas\Chapter6\Models\ShoppingCart.cs" />
