--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/PartOne.Introduction.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartOne/PartOne.Introduction.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Areas\Chapter6\Controllers\HomeController.cs" />
     <Compile Include="Areas\Chapter6\Infrastructure\NinjectDependencyResolver.cs" />
     <Compile Include="Areas\Chapter6\Models\DiscountValueCalculator.cs" />
+    <Compile Include="Areas\Chapter6\Models\FlexibleDiscountCalculator.cs" />
     <Compile Include="Areas\Chapter6\Models\IDiscountCalculator.cs" />
     <Compile Include="Areas\Chapter6\Models\IValueCalculator.cs" />
     <Compile Include="Areas\Chapter6\Models\Merchandise.cs" />
@@ -199,9 +200,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>63105</DevelopmentServerPort>
+          <DevelopmentServerPort>0</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://localhost:44301/</IISUrl>
+          <IISUrl>http://localhost:52124/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
