--- a/Pluralsight Tutorials/3. C-Sharp10/2. C-Sharp Fundamentals/WORKSPACE/Module8/Module8.csproj
+++ b/Pluralsight Tutorials/3. C-Sharp10/2. C-Sharp Fundamentals/WORKSPACE/Module8/Module8.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Module7\Module7.csproj" />
+  </ItemGroup>
+
 </Project>
