--- a/Pluralsight Tutorials/3. Learning the C-Sharp Language/2. C-Sharp Fundamentals/WORKSPACE/Module9/Module9.csproj
+++ b/Pluralsight Tutorials/3. Learning the C-Sharp Language/2. C-Sharp Fundamentals/WORKSPACE/Module9/Module9.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="BethanysPieShopHRM.Logic">
+      <HintPath>..\..\Assets\LocalCustomLogic.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
