--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartTwo.SportStore.Domain/PartTwo.SportStore.Domain.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartTwo.SportStore.Domain/PartTwo.SportStore.Domain.csproj
@@ -41,8 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\ICommodityRepository.cs" />
     <Compile Include="Entities\Class1.cs" />
-    <Compile Include="Entities\Commodities.cs" />
+    <Compile Include="Entities\Commodity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
