--- a/Textbook Exercises/PRO_ASP.NET_MVC/PartTwo.SportStore/packages.config
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/PartTwo.SportStore/packages.config
@@ -1,13 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="5.1.1" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net481" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
+  <package id="Moq" version="4.20.70" targetFramework="net481" />
   <package id="Ninject" version="3.3.6" targetFramework="net481" />
   <package id="Ninject.MVC5" version="3.3.0" targetFramework="net481" />
   <package id="Ninject.Web.Common" version="3.3.2" targetFramework="net481" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.2" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net481" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net481" />
 </packages>
