--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/packages.config
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="5.1.1" targetFramework="net481" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net481" />
